Add a standard placement new operator to WTF_USE_ALLOCATOR.

So that types using WTF_USE_ALLOCATOR can work with WTF::Optional.

BUG=624140

Review-Url: https://codereview.chromium.org/2128583004
Cr-Commit-Position: refs/heads/master@{#404167}