third_party/WebKit/Source/wtf/allocator/PartitionAllocator.h
@@ -156,6 +156,7 @@ public: \
         ASSERT(location); \
         return location; \
     } \
+    void* operator new(size_t, void* location) { return location; } \
 private: \
 typedef int __thisIsHereToForceASemicolonAfterThisMacro
 
